# onager

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  KNOWN_ISSUES.md  Makefile  README.md  ROADMAP.md  extension_config.cmake  index.html  mkdocs.yml  pyproject.toml  rust-toolchain.toml  sitemap.xml  vcpkg.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: dist_pipeline.yml  docs.yml  lints.yml  tests.yml
docs/: CONFIGURATION.md  ERROR_CODES.md  README.md  index.md
docs/examples/: README.md  analytics.md  basic.md  centrality.md  community.md  e1_core_functionality.sql  e2_advanced_features.sql  e3_versioning.sql  e4_json_utils.sql  e5_cache_ops.sql  links.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: approximation.md  architecture.md  centrality.md  community.md  generators.md  graph-registry.md  links.md  metrics.md  mst.md  parallel.md  subgraphs.md  traversal.md
docs/reference/: input-formats.md  sql-functions.md
examples/analytics/: index.html
examples/basic/: index.html
examples/centrality/: index.html
examples/community/: index.html
examples/links/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/approximation/: index.html
guide/centrality/: index.html
guide/community/: index.html
guide/generators/: index.html
guide/graph-registry/: index.html
guide/links/: index.html
guide/metrics/: index.html
guide/mst/: index.html
guide/parallel/: index.html
guide/subgraphs/: index.html
guide/traversal/: index.html
onager/: Cargo.toml  cbindgen.toml
onager/bindings/: onager_extension.cpp
onager/bindings/functions/: approximation.cpp  centrality.cpp  community.cpp  generators.cpp  links.cpp  metrics.cpp  mst.cpp  parallel.cpp  personalized.cpp  scalar_functions.cpp  subgraphs.cpp  traversal.cpp
onager/bindings/include/: functions.hpp  onager_extension.hpp  rust.h
onager/src/: error.rs  ffi.rs  graph.rs  lib.rs
onager/src/algorithms/: approximation.rs  centrality.rs  community.rs  generators.rs  large_graph_tests.rs  links.rs  metrics.rs  mod.rs  mst.rs  parallel.rs  personalized.rs  regression_tests.rs  subgraphs.rs  traversal.rs
onager/src/ffi/: algorithms.rs  approximation.rs  centrality.rs  common.rs  community.rs  generators.rs  links.rs  metrics.rs  mod.rs  mst.rs  parallel.rs  personalized.rs  subgraphs.rs  traversal.rs
reference/input-formats/: index.html
reference/sql-functions/: index.html
search/: search_index.json
stylesheets/: extra.css
test/: README.md
test/sql/: test_gaggle_core.test  test_gaggle_edge_cases.test  test_gaggle_errors.test  test_gaggle_integration.test  test_gaggle_json.test  test_gaggle_types.test  test_onager_approximation.test  test_onager_centrality.test  test_onager_community.test  test_onager_generators.test  test_onager_links.test  test_onager_metrics.test  test_onager_mst.test  test_onager_parallel.test  test_onager_parallel_large.test  test_onager_personalized.test  test_onager_registry.test  test_onager_regressions.test  test_onager_subgraphs.test  test_onager_traversal.test
