[project]
name = "onager"
version = "0.1.0"
description = "Python environment for the Onager DuckDB extension"

requires-python = ">=3.10,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.0.1,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pytest-order (>=1.2.0,<2.0.0)",
    "mypy (>=1.11.1,<2.0.0)",
    "ruff (>=0.9.3,<1.0.0)",
    "icecream (>=2.1.4,<3.0.0)",
    "jsonschema (>=4.22.0,<5.0.0)",
    "duckdb (>=1.4.0,<1.6.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.12,<10.0.0)",
    "mkdocstrings-python (>=1.16.10,<2.0.0)",
]
