[package]
name = "onager"
version = "0.1.0-alpha.1"
edition = "2021"
publish = false
description = "A graph analytics extension for DuckDB"

[lib]
name = "onager"
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
duckdb_extension = []
default = []

[dependencies]
# Graph algorithms library
graphina = { path = "../external/graphina", features = ["centrality", "community", "mst", "traversal", "subgraphs"] }

# Core utilities
once_cell = "1.19"
parking_lot = "0.12"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3.10"
proptest = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
